# gazebo_sdf_controller

./: .gitignore  README.md  example_run.py
control_plugin/: CMakeLists.txt  publisher.cpp
data_publisher_plugin/: CMakeLists.txt  data_publisher.cc
database/: my_robot.world
database/my_bot/: my_robot.world
database/my_bot/my_robot/: model.sdf
launch_plugin/: CMakeLists.txt  launch_plugin.cc
vector_message_type/msgs/: CMakeLists.txt  control_vector.proto
